django-container-manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: noiroze-web-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: noiroze-web
  type: NodePort
  ports:
    - port: 8000 # 서비스가 생성할 포트  
      targetPort: 8000 # 서비스가 접근할 pod의 포트
      protocol: TCP
